--- a/packages/data-product-backend/data-product-lib/build.gradle
+++ b/packages/data-product-backend/data-product-lib/build.gradle
@@ -376,13 +376,9 @@ dependencies {
 	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: '3.1.4'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.1.4'
-
-    implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
-    
-	implementation (group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'){
-        exclude (group: 'com.fasterxml.jackson.core')
-    }
-    	
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-graphql
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-graphql', version: '2.7.0'
+    implementation group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
     implementation group: 'com.graphql-java', name: 'graphql-java-extended-scalars', version: '1.0'
     
 	implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.5.13'
@@ -433,8 +429,9 @@ dependencies {
     
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
-	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
+	// implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
 
     implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 	
