--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -52,6 +52,7 @@ APP_FEEDBACK_EXTERNAL_URL=${PROJECTSMO_APP_FEEDBACK_EXTERNAL_URL}
 ENABLE_CODE_SPACE=${PROJECTSMO_ENABLE_CODE_SPACE}
 CODE_SPACE_API_BASEURL=${PROJECTSMO_CODE_SPACE_API_BASEURL}
 CODE_SPACE_GIT_PAT_APP_URL=${PROJECTSMO_CODE_SPACE_GIT_PAT_APP_URL}
+CODE_SPACE_GIT_ORG_NAME=${PROJECTSMO_CODE_SPACE_GIT_ORG_NAME}
 CODESPACE_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_LOGS_URL}
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_BUILD_LOGS_URL}
 CODESPACE_OIDC_POPUP_URL: ${CODESPACE_OIDC_POPUP_URL},  
