--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -119,6 +119,7 @@ APP_FEEDBACK_EXTERNAL_URL=YOUR_APP_FEEDBACK_EXTERNAL_URL
 ENABLE_CODE_SPACE=false
 CODE_SPACE_API_BASEURL=
 CODE_SPACE_GIT_PAT_APP_URL=
+CODE_SPACE_GIT_ORG_NAME=
 CODESPACE_OPENSEARCH_LOGS_URL=
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=
 CODESPACE_OIDC_POPUP_URL=,
