removed tech user and plugin condition changes

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -941,8 +941,8 @@ definitions:
         description: "URL of the project deployed"
       secureWithIAMRequired:
         type: boolean
-      technicalUserDetailsForIAMLogin:
-        type: string    
+      # technicalUserDetailsForIAMLogin:
+      #   type: string    
       lastDeployedBy:
         $ref: "#/definitions/UserInfoVO" 
       lastDeployedBranch:
