productOwner lov changes

--- a/packages/data-product-backend/data-product-lib/src/main/resources/api/DataProduct.yaml
+++ b/packages/data-product-backend/data-product-lib/src/main/resources/api/DataProduct.yaml
@@ -276,6 +276,31 @@ paths:
           description: "Method not allowed"
         500:
           description: "Internal error"
+          
+  /dataproducts/productOwner:
+    get:
+      tags:
+        - "dataproducts"
+      summary: "Get lov of Information Officer."
+      description: "Get lov of IO in dataproducts. This endpoints will be used to get a dataproducts for a given identifier."
+      operationId: "getProductOwnerLov"
+      responses:
+        200:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/ProductOwnerCollectionVO"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
 
   /dataproducts/owners:
     get:
@@ -494,6 +519,14 @@ definitions:
           $ref: "#/definitions/DataProductLovVO"   
 
   IoCollectionVO: 
+    type: object
+    properties:
+      data:
+        type: array
+        items: 
+          $ref: "#/definitions/DataProductLovVO" 
+
+  ProductOwnerCollectionVO: 
     type: object
     properties:
       data:
