--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -466,74 +466,74 @@ paths:
           
 # path to get service 
 #  supported http methods GET    
- # /kong/services/{serviceName}:
-  # get:
-    # tags:
-        # - "kong"
-    # summary: "Get a service by Name."
-    # description: "Get a service by Name"
-    # operationId: "getServiceByName"
-    # parameters:
-      # - name: "serviceName"
-        # in: "path"
-        # description: "Name of the service to be fetched"
-        # required: true
-        # type: "string"
-    # responses:
-        # 200:
-          # description: "Returns message of success or failure"
-          # schema:
-            # $ref: "#/definitions/CreateServiceResponseVO"
-        # 204:
-          # description: "Fetch complete, no content found."
-        # 400:
-          # description: "Bad request."
-        # 401:
-          # description: "Request does not have sufficient credentials."
-        # 403:
-          # description: "Request is not authorized."
-        # 405:
-          # description: "Method not allowed"
-        # 500:
-          # description: "Internal error"    
+ /kong/services/{serviceName}:
+  get:
+    tags:
+        - "kong"
+    summary: "Get a service by Name."
+    description: "Get a service by Name"
+    operationId: "getServiceByName"
+    parameters:
+      - name: "serviceName"
+        in: "path"
+        description: "Name of the service to be fetched"
+        required: true
+        type: "string"
+    responses:
+        200:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/CreateServiceResponseVO"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"    
           
 # # path to get route 
-# #  supported http methods GET     
- # /kong/services/{serviceName}/routes/{routeName}:
-    # get:
-      # tags:
-        # - "kong"
-      # summary: "Get a route by ID."
-      # description: "Get a route by ID"
-      # operationId: "getRouteByName"
-      # parameters:
-      # - name: "serviceName"
-        # in: "path"
-        # description: "Name of the service for which route has to be fetched"
-        # required: true
-        # type: "string"
-      # - name: "routeName"
-        # in: "path"
-        # description: "Name of the route to be fetched"
-        # required: true
-        # type: "string"  
-      # responses:
-        # 200:
-          # description: "Returns message of success or failure"
-          # schema:
-            # $ref: "#/definitions/CreateRouteResponseVO"
-        # 204:
-          # description: "Fetch complete, no content found."
-        # 400:
-          # description: "Bad request."
-        # 401:
-          # description: "Request does not have sufficient credentials."
-        # 403:
-          # description: "Request is not authorized."
-        # 405:
-          # description: "Method not allowed"
-        # 500:
-          # description: "Internal error"
+#  supported http methods GET     
+ /kong/services/{serviceName}/routes/{routeName}:
+    get:
+      tags:
+        - "kong"
+      summary: "Get a route by ID."
+      description: "Get a route by ID"
+      operationId: "getRouteByName"
+      parameters:
+      - name: "serviceName"
+        in: "path"
+        description: "Name of the service for which route has to be fetched"
+        required: true
+        type: "string"
+      - name: "routeName"
+        in: "path"
+        description: "Name of the route to be fetched"
+        required: true
+        type: "string"  
+      responses:
+        200:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/CreateRouteResponseVO"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
     
 
 definitions:       
