--- a/deployment/kubernetes/helm/charts/clamav/templates/clamav-deployment.yaml
+++ b/deployment/kubernetes/helm/charts/clamav/templates/clamav-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     name: {{ .Chart.Name }}
 spec:
-  replicas: {{ .Values.image.replicaCount }}
+  # replicas: {{ .Values.image.replicaCount }}
   selector:
     matchLabels:
       name: {{ .Chart.Name }}
