--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -81,11 +81,12 @@ codeServer:
   base.uri: ${CODE_BASE_URI:XXXX}
   env.ref: ${CODE_SERVER_GIT_ENVREF:dev}
   env.value: ${CODE_SERVER_GIT_ENV:Development}
-  env.url: ${CODE_SERVER_ENVURL:XXXX}
-  git.appname: ${CODE_SERVER_APPLICATION_NAME:XXX}
+  env.url: ${CODE_SERVER_ENVURL:XXX}
+  git.appname: ${CODE_SERVER_APPLICATION_NAME:XXXX}
   jupyter.pat: ${CODE_SERVER_JUPYTER_PAT:XXX}
   jupyter.url: ${CODE_SERVER_JUPYTER_URL:XXX}
   workspace.url: ${CODE_SERVER_WORKSPACE_URL:XXX}
+  workspace.apikey: ${CODE_SERVER_API_KEY:XXX}
 swagger.headers.authorization.token: ${SWAGGER_HEADER_AUTH:XXXXXX}
 management.endpoints.web.exposure.include: loggers,health
 management.endpoint.loggers.enabled: true
