--- a/deployment/kubernetes/helm/charts/clamav/templates/rest/clamav-rest-deployment.yaml
+++ b/deployment/kubernetes/helm/charts/clamav/templates/rest/clamav-rest-deployment.yaml
@@ -6,7 +6,9 @@ metadata:
   labels:
     name: {{ .Values.app.backend.name }}
 spec:
-  # replicas: {{ .Values.app.backend.replicaCount }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.app.backend.replicaCount }}
+  {{- end }}  
   selector:
     matchLabels:
       name: {{ .Values.app.backend.name }}
