--- a/deployment/kubernetes/helm/charts/clamav/templates/clamav-deployment.yaml
+++ b/deployment/kubernetes/helm/charts/clamav/templates/clamav-deployment.yaml
@@ -6,7 +6,9 @@ metadata:
   labels:
     name: {{ .Chart.Name }}
 spec:
-  # replicas: {{ .Values.image.replicaCount }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.image.replicaCount }}
+  {{- end }}  
   selector:
     matchLabels:
       name: {{ .Chart.Name }}
