--- a/deployment/kubernetes/helm/charts/clamav/templates/rest/hpa.yaml
+++ b/deployment/kubernetes/helm/charts/clamav/templates/rest/hpa.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.autoscaling.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -8,8 +9,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ .Values.app.backend.name }}
-  minReplicas: 2
-  maxReplicas: 10
+  minReplicas: {{ .Values.autoscaling.minReplicas }}
+  maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
   - type: Resource
     resource:
@@ -23,3 +24,4 @@ spec:
       target:
         type: Utilization
         averageUtilization: 70  
+{{- end }}
