--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc.pathmatch.matching-strategy: ant_path_matcher
   application:
     name: dna-codeserver-service
-    version: 1.1.5
+    version: 1.1.10
 
   flyway:
     enabled: ${FLYWAY_ENABLED:false}
@@ -159,6 +159,9 @@ kong:
    authoriserClientSecret: ${AUTHORISER_CLIENT_SECRET:XXXX}
    authoriserIntrospectionEndpointAuthMethod: ${AUTHORISER_INTROSPECTION_ENDPOINT_AUTH_METHOD:XXXX}
    authoriserScope: ${AUTHORISER_SCOPE:XXXX}
+   authRedirectAfterLogoutUri: ${AUTHORISER_REDIRECT_AFTER_LOGOUT_URI:XXXX}
+   authDiscovery: ${AUTHORISER_DISCOVERY:XXXX}
+   authIntrospectionEndpoint: ${AUTHORISER_INTROSPECTION_ENDPOINT:XXXX}
 
 workspace:
   update: ${UPDATE_WORKSPACEDATA:XXXX}   
