--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -159,9 +159,9 @@ kong:
    authoriserClientSecret: ${AUTHORISER_CLIENT_SECRET:XXXX}
    authoriserIntrospectionEndpointAuthMethod: ${AUTHORISER_INTROSPECTION_ENDPOINT_AUTH_METHOD:XXXX}
    authoriserScope: ${AUTHORISER_SCOPE:XXXX}
-   authRedirectAfterLogoutUri: ${AUTHORISER_REDIRECT_AFTER_LOGOUT_URI:XXXX}
-   authDiscovery: ${AUTHORISER_DISCOVERY:XXXX}
-   authIntrospectionEndpoint: ${AUTHORISER_INTROSPECTION_ENDPOINT:XXXX}
+   authoriserRedirectAfterLogoutUri: ${AUTHORISER_REDIRECT_AFTER_LOGOUT_URI:XXXX}
+   authoriserDiscovery: ${AUTHORISER_DISCOVERY:XXXX}
+   authoriserIntrospectionEndpoint: ${AUTHORISER_INTROSPECTION_ENDPOINT:XXXX}
 
 workspace:
   update: ${UPDATE_WORKSPACEDATA:XXXX}   
