--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -87,6 +87,7 @@ codeServer:
   jupyter.url: ${CODE_SERVER_JUPYTER_URL:XXX}
   workspace.url: ${CODE_SERVER_WORKSPACE_URL:XXX}
   workspace.apikey: ${CODE_SERVER_API_KEY:XXX}
+  git.pid: ${CODE_SERVER_PID_USER:XXXXX}
 swagger.headers.authorization.token: ${SWAGGER_HEADER_AUTH:XXXXXX}
 management.endpoints.web.exposure.include: loggers,health
 management.endpoint.loggers.enabled: true
