--- a/packages/data-product-backend/data-product-lib/src/main/resources/api/DataProduct.yaml
+++ b/packages/data-product-backend/data-product-lib/src/main/resources/api/DataProduct.yaml
@@ -667,6 +667,10 @@ definitions:
       appId:
         type: string
         description: "planning IT App-ID "
+      leanIXDetails:
+        $ref: "#/definitions/LeanIXDetailsVO"
+
+
       #    required:
       #      - informationOwner
       #      - name
