--- a/packages/data-product-mfe/.env
+++ b/packages/data-product-mfe/.env
@@ -3,5 +3,6 @@ API_BASEURL=
 DATA_PRODUCT_API_BASEURL =
 DATA_GOVERNANCE_HTML_FOR_CHINA_DATA =
 DATA_PRODUCT_PUBLISH_TOU =
-INFORMATION_POLICY_LINK =
-DDX_URL = YOUR_DDX_URL 
+INFORMATION_POLICY_LINK = 
+DDX_URL = YOUR_DDX_URL
+LEANIX_BASEURL = LEANIX_BASEURL
