--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -117,6 +117,7 @@ ENABLE_APP_FEEDBACK=false
 APP_FEEDBACK_EXTERNAL_URL=YOUR_APP_FEEDBACK_EXTERNAL_URL
 
 ENABLE_CODE_SPACE=false
+CODE_SPACE_MFE_APP_URL=http://localhost:8087
 CODE_SPACE_API_BASEURL=
 CODE_SPACE_GIT_PAT_APP_URL=
 CODE_SPACE_GIT_ORG_NAME=
