--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -1,5 +1,5 @@
 CONTAINER_APP_URL=${PROJECTSMO_CONTAINER_APP_URL}
-CODESPACE_API_BASEURL=${PROJECTSMO_CODESPACE_API_BASEURL}
+CODE_SPACE_API_BASEURL=${PROJECTSMO_CODE_SPACE_API_BASEURL}
 API_BASEURL=${PROJECTSMO_API_BASEURL}
 CODE_SPACE_GIT_PAT_APP_URL=${PROJECTSMO_CODE_SPACE_GIT_PAT_APP_URL}
 CODE_SPACE_GIT_ORG_NAME=${PROJECTSMO_CODE_SPACE_GIT_ORG_NAME}
