--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -1,5 +1,5 @@
 CONTAINER_APP_URL=
-CODESPACE_API_BASEURL=
+CODE_SPACE_API_BASEURL=
 API_BASEURL=
 CODE_SPACE_GIT_PAT_APP_URL=
 CODE_SPACE_GIT_ORG_NAME=
