--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -50,6 +50,7 @@ SAP_ANALYTICS_CLOUD_URL=${PROJECTSMO_SAP_ANALYTICS_CLOUD_URL}
 ENABLE_APP_FEEDBACK=${PROJECTSMO_ENABLE_APP_FEEDBACK}
 APP_FEEDBACK_EXTERNAL_URL=${PROJECTSMO_APP_FEEDBACK_EXTERNAL_URL}
 ENABLE_CODE_SPACE=${PROJECTSMO_ENABLE_CODE_SPACE}
+CODE_SPACE_MFE_APP_URL=${PROJECTMO_ENABLE_CODE_SPACE_MFE_APP_URL}
 CODE_SPACE_API_BASEURL=${PROJECTSMO_CODE_SPACE_API_BASEURL}
 CODE_SPACE_GIT_PAT_APP_URL=${PROJECTSMO_CODE_SPACE_GIT_PAT_APP_URL}
 CODE_SPACE_GIT_ORG_NAME=${PROJECTSMO_CODE_SPACE_GIT_ORG_NAME}
