--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -929,6 +929,47 @@ paths:
         500:
           description: "Internal error"
 
+  /workspaces/{id}/collaborator/{userid}/admin:
+    post:
+      tags:
+        - "code-server"
+      summary: "make or remove collaborator admin for workspace project ."
+      description: "make or remove collaborator admin for workspace project."
+      operationId: "makeAdmin"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Workspace ID to be fetched"
+          required: true
+          type: "string"
+        - name: "userid"
+          in: "path"
+          description: "User ID to be deleted"
+          required: true
+          type: "string"
+        - name: isAdmin
+          in: query
+          description: environment variable to select the target environment
+          required: true
+          type: boolean
+      responses:
+        201:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+
           
 definitions:
 
@@ -1347,6 +1388,10 @@ definitions:
       gitUserName:
         type: string
         description: git Username
+      isAdmin:
+        type: boolean
+        description: "is the user has Admin rights"
+        default: false
       required:
         -id
         -gitUserName
