--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -63,12 +63,14 @@ ENABLE_CHRONOS_FORECASTING_SERVICE=${PROJECTMO_ENABLE_CHRONOS_FORECASTING_SERVIC
 ENABLE_DATALAKE_SERVICE=${PROJECTMO_ENABLE_DATALAKE_SERVICE}
 ENABLE_FABRIC_SERVICE=${PROJECTMO_ENABLE_FABRIC_SERVICE}
 ENABLE_DATA_ENTRY_SERVICE=${PROJECTMO_ENABLE_DATA_ENTRY_SERVICE}
+ENABLE_POWER_PLATFORM_SERVICE=${PROJECTMO_ENABLE_POWER_PLATFORM_SERVICE}
 CHRONOS_MFE_APP_URL=${PROJECTMO_ENABLE_CHRONOS_MFE_APP_URL}
 ENABLE_MATOMO_SERVICE=${ENABLE_MATOMO_SERVICE}
 MATOMO_MFE_APP_URL=${MATOMO_MFE_APP_URL}
 DATALAKE_MFE_APP_URL=${DATALAKE_MFE_APP_URL}
 FABRIC_MFE_APP_URL=${FABRIC_MFE_APP_URL}
 DATA_ENTRY_MFE_APP_URL=${DATA_ENTRY_MFE_APP_URL}
+POWER_PLATFORM_MFE_APP_URL=${POWER_PLATFORM_MFE_APP_URL}
 UDEMY_URL=${PROJECTMO_UDEMY_URL}
 LINKEDIN_LEARNING_URL=${PROJECTMO_LINKEDIN_LEARNING_URL}
 DATAIKU_TRAINING_URL=${PROJECTMO_DATAIKU_TRAINING_URL}
