--- a/packages/power-platform-mfe/package.json
+++ b/packages/power-platform-mfe/package.json
@@ -78,7 +78,7 @@
     "postcss-loader": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.48.2",
+    "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
